kubernetes/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      containers:
        - name: hello-go
          image: hello-go
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 8080
