kubernetes/manifest/podv2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  containers:
    - name: hello-go
      image: hello-go:v2
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
#      env:
#        - name: APP_CONF_VALUE
#          value: 123
